client/styles/_global.scss
.checkmark {
	color: $green-dark;
	padding-left: 5px;
}

.profilelink {
	color: $gray-dark;
	padding-right: 5px;

	&:hover {
		color: $brand-primary;
		text-decoration: none;
	}
}

.datepicker-dropdown.datepicker-orient-top:after {
	border-top-color: $dropdown-bg;
}

.dropdown-menu {
	box-shadow: $shadow-lg-offset-x $shadow-lg-offset-y $shadow-lg-blur $default-shadow;
	border: 0;
}

.dropdown-menu > li > a:focus {
	background-color: darken($dropdown-bg, 5%);
	color: $dropdown-link-color;
}

select:hover {
	cursor: pointer;
}

.select_placeholder:hover {
	cursor: not-allowed;
}

.input-group input:focus {
	z-index: 3;
}

.input-lg {
	border-radius: 4px;
}

a:hover,
.btn-link:hover {
	text-decoration: none;
}

.elevate_child {
	box-shadow: none !important;
	transition: box-shadow $default-transition-time;
}

.collapsing,
.fade {
	transition-duration: 0s;
}

